appId: com.logseq.logseq
---
- launchApp
- runFlow:
    when:
      visible: "Choose a graph"
    commands:
      - tapOn:
          text: "wrangler-regression-.*"
          index: 0
- extendedWaitUntil:
    visible:
      id: "pane.journals"
    timeout: 60000
- tapOn: "Edit block First synced block"
- pressKey: ENTER
- pressKey: ENTER
- pressKey: ENTER
- pressKey: ENTER
- pressKey: ENTER
- pressKey: ENTER
- pressKey: BACKSPACE
- pressKey: BACKSPACE
- pressKey: BACKSPACE
- pressKey: BACKSPACE
- pressKey: BACKSPACE
- pressKey: BACKSPACE
- assertVisible:
    id: "toolbar.outliner.editor"
- assertNotVisible: "invalid pending sync completion"
- assertNotVisible: "outliner_effect_failed"
