appId: com.logseq.logseq
---
- runFlow:
    file: "__LOGSEQ_E2E_SETUP_FLOW__"
- launchApp
- assertVisible:
    id: "button.sidebar"
- assertVisible:
    id: "pane.journals"
- scrollUntilVisible:
    element:
      id: "block.rich.quote"
    direction: DOWN
    timeout: 60000
    speed: 50
    visibilityPercentage: 50
    centerElement: true
- assertVisible:
    id: "block.rich.quote"
- scrollUntilVisible:
    element:
      id: "block.rich.math"
    direction: DOWN
    timeout: 30000
    speed: 50
    visibilityPercentage: 50
    centerElement: true
- assertVisible:
    id: "block.rich.math"
- scrollUntilVisible:
    element:
      id: "block.rich.codeBlock"
    direction: DOWN
    timeout: 30000
    speed: 50
    visibilityPercentage: 50
    centerElement: true
- assertVisible:
    id: "block.rich.codeBlock"
- assertVisible: "swift"
- assertVisible: "let answer = 42"
- scrollUntilVisible:
    element:
      id: "block.rich.video"
    direction: DOWN
    timeout: 30000
    speed: 50
    visibilityPercentage: 20
    centerElement: true
- assertVisible:
    id: "block.rich.video"
- scrollUntilVisible:
    element:
      id: "block.rich.iframe"
    direction: DOWN
    timeout: 30000
    speed: 50
    visibilityPercentage: 20
    centerElement: true
- assertVisible:
    id: "block.rich.iframe"
- scrollUntilVisible:
    element:
      id: "block.rich.inline.2"
    direction: DOWN
    timeout: 30000
    speed: 50
    visibilityPercentage: 50
    centerElement: true
- assertVisible:
    id: "block.rich.inline.0"
- assertVisible:
    id: "block.rich.inline.2"
- assertVisible:
    id: "block.rich.video"
- scrollUntilVisible:
    element:
      id: "block.rich.youtubeTimestamp"
    direction: DOWN
    timeout: 30000
    speed: 50
    visibilityPercentage: 50
    centerElement: true
- assertVisible:
    id: "block.rich.youtubeTimestamp"
- tapOn:
    id: "block.rich.youtubeTimestamp"
- assertVisible:
    id: "block.rich.youtubeTimestamp.start.83"
- scrollUntilVisible:
    element:
      id: "block.rich.video.start.83"
    direction: UP
    timeout: 30000
    speed: 50
    visibilityPercentage: 20
    centerElement: true
